2008-03-06  0.36 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Updated ppport.h
	* auto-load IO::Handle when needed
	* Tested with all available perl builds, including a fresh
	  threaded 5.11 (blead)

2008-03-01  0.35 (Valloire) - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* use warnings/$^W = 1
	* Tested on 5.10.0, 5.8.8, 5.6.2, and 5.005_04, Strawberry and Cygwin
	* Diagnostics for failed new ()
	* New 'blank_is_undef' option
	* Updated docs
	* Extended the DIAGNOSTICS a bit
	* Updated TODO
	* Fixed allow_whitespace issue, revealed by blank_is_undef
	* Re-enabled some tests
	* Fixed parse error that passed for q{1, "bar",2} with escape_char +
	* Reversed an erroneous test result in the funny combo section
	* Extended diagnostics tests
	* Extended XS coverage
	* Removed error 2033

2008-01-04  0.34 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* No change, but 0.33 was shipped with an old META.yml

2008-01-02  0.33 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Text-CSV_XS now under git
	* Upped copyright to 2008
	* Added all prereq's to Makefile.PL
	* Tested under perl 5.10

2007-10-24  0.32 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Added $csv->error_diag () to SYNOPSIS
	* Added need for diag when new () fails to TODO
	* Fixed a sneaked-in defined or in examples/csv2xls
	* Plugged a 32byte memory leak in the cache code (valgrind++)
	* Some perlcritic level1 changes

2007-07-23  0.31 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* Removed prototypes in examples/csv2xls
	* Improved usage for examples/csv2xls (GetOpt::Long now does --help/-?)
	* Extended examples/csv2xls to deal with Unicode (-u)
	* Serious bug in Text::CSV_XS::NV () type setting, causing the
	  resulting field to be truncated to IV

2007-06-21  0.30 - H.Merijn Brand   <h.m.brand@xs4all.nl>

	* ,\rx, is definitely an error without binary (used to HANG!)
	* Fixed bug in attribute caching for undefined eol
	* Cleaned up some code after -W*** warnings
	* Added verbatim.