@@ -14,6 +14,9 @@ Copying:
     This program is free software; you can redistribute it and/or modify
     it under the same terms as Perl itself.
 
+    Recent changes can be (re)viewed in the public GIT repository at
+    git://repo.or.cz/Text-CSV_XS.git
+
 Prerequisites:
     perl 5.005. 5.005 will not be able to build the manual pages.
 
